--- a/index.html.erb
+++ b/index.html.erb
@@ -99,7 +99,7 @@
 <div class="report mTop10">
   <div class="innerReport">
     <div class="whiteTint pAll10 clearFix">
-      <p class="clear alert" id="comments_for_parent_options">
+      <p class='clear alert' id="comments_for_parent_options">
         <% if @course.blank? %>
             <%=t :select_hint, :scope => [:parent_reports, :assessment_report] -%>
         <% else %>
