--- a/default.css
+++ b/default.css
@@ -1,8 +1,8 @@
 
 /* standard elements */
 * {
-	margin: 0;
-	padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 a {color: #663;}
@@ -10,49 +10,49 @@ a {color: #663;}
 a:hover {color: #993;}
 
 body {
-	background: #0D0D0D url(img/bg.gif) repeat-y center top;
-	color: #55554A;
-	font: normal 62.5% "Lucida Sans Unicode",sans-serif;
-	margin: 0;
+  background: #FFF url(img/texture.jpg) repeat center fixed;
+  color: #55554A;
+  font: normal 62.5% "Lucida Sans Unicode",sans-serif;
+  margin: 0;
 }
 
 p,code,ul {
-	font-size: 1.2em;
-	padding-bottom: 1.2em;
+  font-size: 1.2em;
+  padding-bottom: 1.2em;
 }
 
 h1 {
-	font-size: 1.4em;
-	margin-bottom: 4px;
+  font-size: 1.4em;
+  margin-bottom: 4px;
 }
 
 li {
-	list-style: url(img/li.gif);
-	margin-left: 18px;
+  list-style: url(img/li.gif);
+  margin-left: 18px;
 }
 
 code {
-	background: url(img/bgcode.gif);
-	border: 1px solid #060606;
-	color: #666;
-	display: block;
-	font: normal 1.1em "Lucida Sans Unicode",serif;
-	margin-bottom: 12px;
-	padding: 8px 10px;
-	white-space: pre;
+  background: url(img/bgcode.gif);
+  border: 1px solid #060606;
+  color: #666;
+  display: block;
+  font: normal 1.1em "Lucida Sans Unicode",serif;
+  margin-bottom: 12px;
+  padding: 8px 10px;
+  white-space: pre;
 }
 
 blockquote {
-	background: url(img/quote.gif) no-repeat;
-	color: #664;
-	display: block;
-	font: normal 1.2em "Lucida Sans Unicode",serif;
-	padding-left: 28px;
+  background: url(img/quote.gif) no-repeat;
+  color: #664;
+  display: block;
+  font: normal 1.2em "Lucida Sans Unicode",serif;
+  padding-left: 28px;
 }
 
 h1,h2,h3 {
-	color: #663;
-	padding-top: 6px;
+  color: #663;
+  padding-top: 6px;
 }
 
 /* misc */
@@ -60,63 +60,114 @@ h1,h2,h3 {
 
 /* structure */
 .container {
-	margin: 0 auto;
-	width: 730px;
+  margin: 0 auto;
+  width: 900px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  border: 3px #FFF solid;
+  -moz-border-radius: 15px;
+  -webkit-border-radius: 15px;
+  -o-border-radius: 15px;
+  border-radius: 15px
 }
 
 /* title */
 .title {
-	float: left;
-	margin-top: 22px;
-	text-align: center;
-	width: 220px;
+  float: left;
+  margin-top: 22px;
+  text-align: center;
+  width: 220px;
 }
 .title h1 {
-	color: #993;
-	font: normal 2em Verdana,sans-serif;
+  color: #993;
+  font: normal 2em Verdana,sans-serif;
 }
 .title h2 {
-	color: #665;
-	font: normal 1.1em Verdana,sans-serif;
+  color: #665;
+  font: normal 1.1em Verdana,sans-serif;
 }
 
 /* navigation */
 .navigation {
-	background: url(img/holder.jpg) no-repeat;
-	height: 100px;
-	padding: 0 16px;
+  
+  height: 100px;
+  padding: 0 16px;
 }
 .navigation a {
-	border-left: 1px solid #111;	
-	color: #665;
-	float: right;
-	font: bold 1.2em "Trebuchet MS",sans-serif;
-	margin-top: 9px;
-	padding: 58px 18px 8px;
-	text-align: center;
-	text-decoration: none;
+  border-left: 1px solid #111;
+  color: #665;
+  float: right;
+  font: bold 1.2em "Trebuchet MS",sans-serif;
+  margin-top: 9px;
+  padding: 58px 18px 8px;
+  text-align: center;
+  text-decoration: none;
 }
 .navigation a:hover {
-	background: #000 url(img/navhover.gif) repeat-x;
-	color: #993;
-	padding: 56px 18px 10px;
+  background: #000 url(img/navhover.gif) repeat-x;
+  color: #993;
+  padding: 56px 18px 10px;
 }
 
 /* holders */
-.holder {
-	background: url(img/bgholder.jpg) repeat-y;
-	padding: 0 32px;
+.holder {  
+  padding: 0 32px;
 }
 .holder_top,.footer {
-	clear: both;
-	background: url(img/holder.jpg) no-repeat;
-	height: 40px;
+  clear: both;  
+  height: 40px;
 }
 
 /* footer */
 .footer {
-	background-position: left bottom;
-	color: #665;
-	font-size: 1.1em;
-	text-align: center;
+  background-position: left bottom;
+  color: #665;
+  font-size: 1.1em;
+  text-align: center;
+}
+p {
+  padding: 0 0 1em;
+}
+
+.msg_list {
+  width: 100%;
+}
+
+.msg_head {
+  padding: 5px 10px;
+  cursor: pointer;
+  position: relative;
+  background-color:#9C8C7D;
+  margin:1px;
+  height: 30px;
+}
+
+.msg_body {
+  padding: 5px 10px 15px;
+  background-color:#F4F4F8;
+}
+
+.greenDiv{
+  background-color: #009933;
+    font-weight: bold;
+  color: #ffffff;
+}
+
+
+.yellowDiv{
+  background-color: #ffcc66;
+    font-weight: bold;
+  color: #000;
+}
+.redDiv{  
+  background-color: #cc0000;
+    font-weight: bold;
+  color: #ffffff;
+}
+
+.paleDiv{
+  
+  background-color: #666666;
+  font-weight: bold;
+  color: #ffffff;
 }
